--- a/modules/header/header.styl
+++ b/modules/header/header.styl
@@ -1,3 +1,12 @@
 header {
-    background: black;
+    background: #343b40;
+    height: 50px;
+    padding: 0 0 0 25px;
+}
+
+.logo {
+    color: lightgreen;
+    font: 42px/50px 'Architects Daughter', cursive;
+    text-decoration: none;
+    float: left;
 }
