--- a/modules/header/header.styl
+++ b/modules/header/header.styl
@@ -9,4 +9,18 @@ header {
     font: 42px/50px 'Architects Daughter', cursive;
     text-decoration: none;
     float: left;
+    margin-right: 50px;
+}
+
+.step {
+    display: inline-block;
+    color: white;
+    font-size: 20px;
+    line-height: 50px;
+    margin: 0 20px 0 0;
+    text-decoration: none;
+
+    &.active {
+        color: #346bff
+    }
 }
