--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,47 @@
-header {
+.audio-selector {
+  float: right;
+  margin-left: 20px;
+  width: 280px;
+  height: 100%;
+  position: relative;
+}
+.audio-selector__header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+}
+.audio-selector__title {
+  font-size: 20px;
+  line-height: 26px;
+  font-weight: bold;
+  margin: 0;
+}
+.audio-list {
+  margin: 0;
+  letter-spacing: normal;
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  padding: 0;
+  width: 100%;
+  overflow: auto;
+  font-size: 14px;
+  box-sizing: border-box;
+}
+.audio-list__item {
+  padding: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+.audio-list__item:hover {
+  background: #d3d3d3;
+}
+
+.header {
   background: #343b40;
   height: 50px;
   padding: 0 0 0 25px;
@@ -321,6 +364,14 @@ header {
   vertical-align: top;
 }
 
+.create-section {
+  padding: 0 0 110px;
+  position: relative;
+  height: 100%;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
 @font-face {
   font-family: 'icon-font';
   src: url("../fonts/Material-Design-Iconic-Font.eot?v=1.0.1");
@@ -330,4 +381,14 @@ header {
 }
 body {
   margin: 0;
+}
+body,
+html {
+  height: 100%;
+}
+.main {
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  width: 100%;
 }
