--- a/stylus/main.css
+++ b/stylus/main.css
@@ -8,3 +8,13 @@
 body {
   margin: 0;
 }
+body,
+html {
+  height: 100%;
+}
+.main {
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  width: 100%;
+}
