--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -9,3 +9,14 @@
 body {
     margin: 0
 }
+
+body, html {
+    height: 100%;
+}
+
+.main {
+    position: absolute;
+    top: 50px;
+    bottom: 0;
+    width: 100%;
+}
