--- a/css/main.css
+++ b/css/main.css
@@ -31,14 +31,24 @@
   box-sizing: border-box;
 }
 .audio-list__item {
-  padding: 5px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  position: relative;
+  padding: 5px 40px 5px 5px;
   cursor: pointer;
 }
 .audio-list__item:hover {
   background: #d3d3d3;
+}
+.audio-list__duration {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  margin-left: 5px;
+}
+.audio-list__name {
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .header {
@@ -71,7 +81,7 @@
   left: 0;
   right: 0;
   background: rgba(0,0,0,0.5);
-  height: 110px;
+  height: 150px;
   padding: 0 100px 0 0;
 }
 .create-slideshow {
@@ -132,6 +142,28 @@
   min-width: 100%;
   vertical-align: top;
   min-height: 100%;
+}
+.timeline-audios {
+  overflow: auto;
+  white-space: nowrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.timeline-audios__item {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  padding: 5px 40px 5px 5px;
+}
+.timeline-audios__name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.timeline-audios__duration {
+  position: absolute;
+  right: 5px;
+  top: 5px;
 }
 @-webkit-keyframes create {
   0% {
@@ -365,7 +397,7 @@
 }
 
 .create-section {
-  padding: 0 0 110px;
+  padding: 0 0 150px;
   position: relative;
   height: 100%;
   box-sizing: border-box;
