--- a/modules/audio-selector/audio-selector.styl
+++ b/modules/audio-selector/audio-selector.styl
@@ -33,13 +33,25 @@
     box-sizing: border-box;
 
     &__item {
-        padding: 5px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
+        position: relative;
+        padding: 5px 40px 5px 5px;
         cursor: pointer;
         &:hover {
             background: lightgray;
         }
+    }
+
+    &__duration {
+        position: absolute;
+        right: 5px;
+        top: 5px;
+        margin-left: 5px;
+    }
+
+    &__name {
+        display: block;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
