--- a/modules/timeline/timeline.css
+++ b/modules/timeline/timeline.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   background: rgba(0,0,0,0.5);
-  height: 110px;
+  height: 150px;
   padding: 0 100px 0 0;
 }
 .create-slideshow {
@@ -61,6 +61,28 @@
   min-width: 100%;
   vertical-align: top;
   min-height: 100%;
+}
+.timeline-audios {
+  overflow: auto;
+  white-space: nowrap;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.timeline-audios__item {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  padding: 5px 40px 5px 5px;
+}
+.timeline-audios__name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.timeline-audios__duration {
+  position: absolute;
+  right: 5px;
+  top: 5px;
 }
 @-moz-keyframes create {
   0% {
