--- a/modules/header/header.styl
+++ b/modules/header/header.styl
@@ -1,26 +1,17 @@
+@import '../../stylus/variables';
+
 .header {
-    background: #343b40;
-    height: 50px;
+    background: $accentColor;
+    height: $headerHeight;
     padding: 0 0 0 25px;
+    margin-bottom: 10px;
 }
 
 .logo {
-    color: lightgreen;
-    font: 42px/50px 'Architects Daughter', cursive;
+    color: white;
+    font: 34px/50px 'Lobster', cursive;
     text-decoration: none;
+    letter-spacing: 2px;
     float: left;
     margin-right: 50px;
-}
-
-.step {
-    display: inline-block;
-    color: white;
-    font-size: 20px;
-    line-height: 50px;
-    margin: 0 20px 0 0;
-    text-decoration: none;
-
-    &.active {
-        color: #346bff
-    }
 }
