--- a/modules/photo-selector/styles/album-list.css
+++ b/modules/photo-selector/styles/album-list.css
@@ -1,5 +1,5 @@
 .album-list {
-  margin: 0;
+  margin: 0 -25px 0 0;
   padding: 0;
   list-style: none;
   font-size: 11px;
@@ -10,6 +10,88 @@
 .album-list_size_q {
   font-size: 16px;
 }
+.album-list__buttons {
+  position: absolute;
+  top: 0;
+  margin-top: -34px;
+  width: 100%;
+  left: 0;
+  text-align: center;
+  transition: top 0.1s;
+}
+.album-list__item:hover .album-list__buttons {
+  top: 50%;
+}
+.album-list__button {
+  display: inline-block;
+  vertical-align: top;
+  width: 34px;
+  height: 34px;
+  transition: top 0.1s, background 0.1s;
+  border: none;
+  padding: 0;
+  margin: 0 8px;
+  background: #388e3c;
+  border-radius: 2px;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  text-decoration: none;
+}
+.album-list__button:hover {
+  background: #4caf50;
+}
+.album-list__button:active {
+  box-shadow: 0 2px 3px #000 inset;
+}
+.album-list__button:before {
+  display: block;
+  line-height: 34px;
+  font-family: 'icon-font';
+}
+.album-list__button_add:before {
+  font-size: 34px;
+  content: "\f0fb";
+}
+.album-list__button_open:before {
+  font-size: 28px;
+  content: "\f03f";
+}
+.album-list_size_p .album-list__buttons {
+  margin-top: -45px;
+}
+.album-list_size_p .album-list__button {
+  width: 45px;
+  height: 45px;
+  margin: 0 10px;
+}
+.album-list_size_p .album-list__button:before {
+  line-height: 45px;
+}
+.album-list_size_p .album-list__button_add:before {
+  font-size: 45px;
+}
+.album-list_size_p .album-list__button_open:before {
+  font-size: 37px;
+}
+.album-list_size_q .album-list__buttons {
+  margin-top: -55px;
+}
+.album-list_size_q .album-list__button {
+  width: 55px;
+  height: 55px;
+  margin: 0 13px;
+  border-radius: 5px;
+}
+.album-list_size_q .album-list__button:before {
+  line-height: 55px;
+}
+.album-list_size_q .album-list__button_add:before {
+  font-size: 55px;
+}
+.album-list_size_q .album-list__button_open:before {
+  font-size: 45px;
+}
 .album-list__item {
   float: left;
   width: 130px;
@@ -18,12 +100,17 @@
   margin: 5px;
   position: relative;
   animation: create 0.1s;
+  background: #000;
+  text-align: left;
 }
 .album-list__item-title {
   position: absolute;
   bottom: 0;
   left: 0;
   background: rgba(0,0,0,0.7);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   color: #fff;
   padding: 3px 4px;
   width: 100%;
@@ -37,6 +124,11 @@
   min-width: 100%;
   vertical-align: top;
   min-height: 100%;
+  opacity: 1;
+  transition: opacity 0.1s;
+}
+.album-list__item:hover img {
+  opacity: 0.7;
 }
 .album-list_size_p .album-list__item-title {
   padding: 5px 7px;
@@ -47,12 +139,12 @@
 .album-list_size_p .album-list__item {
   width: 200px;
   height: 130px;
-  margin: 7px;
+  margin: 7px 16px;
 }
 .album-list_size_q .album-list__item {
   width: 320px;
   height: 210px;
-  margin: 10px;
+  margin: 10px 15px;
 }
 @-moz-keyframes create {
   0% {
