--- a/modules/photo-selector/styles/photo-list.css
+++ b/modules/photo-selector/styles/photo-list.css
@@ -1,14 +1,7 @@
 .photo-list {
-  margin: 0;
+  margin: 0 -25px 0 0;
   padding: 0;
   list-style: none;
-  font-size: 11px;
-}
-.photo-list_size_p {
-  font-size: 13px;
-}
-.photo-list_size_q {
-  font-size: 16px;
 }
 .photo-list__item {
   float: left;
@@ -18,41 +11,60 @@
   margin: 5px;
   position: relative;
   animation: create 0.1s;
+  cursor: pointer;
 }
-.photo-list__item-title {
+.photo-list__item:after {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
-  background: rgba(0,0,0,0.7);
-  color: #fff;
-  padding: 3px 4px;
   width: 100%;
-  transition: transform 0.1s;
-  transform: translateY(100%);
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  font-size: 50px;
+  text-align: center;
+  font-family: 'icon-font';
+  opacity: 0;
+  transition: opacity 0.1s;
+  content: '';
+  line-height: 80px;
 }
-.photo-list__item:hover .photo-list__item-title {
-  transform: translateY(0);
+.photo-list__item.selected:after {
+  opacity: 1;
+  color: #4caf50;
+  content: "\f023";
+}
+.photo-list__item:hover:after {
+  opacity: 1;
+  color: #4caf50;
+  content: "\f0fb";
+}
+.photo-list__item.selected:hover:after {
+  opacity: 1;
+  color: #d32f2f;
+  content: "\f102";
 }
 .photo-list__item img {
   min-width: 100%;
   vertical-align: top;
   min-height: 100%;
 }
-.photo-list_size_p .photo-list__item-title {
-  padding: 5px 7px;
-}
-.photo-list_size_q .photo-list__item-title {
-  padding: 7px 10px;
+.photo-list_size_p .photo-list__item:after {
+  line-height: 130px;
+  font-size: 80px;
 }
 .photo-list_size_p .photo-list__item {
   width: 200px;
   height: 130px;
-  margin: 7px;
+  margin: 7px 16px;
+}
+.photo-list_size_q .photo-list__item:after {
+  line-height: 210px;
+  font-size: 130px;
 }
 .photo-list_size_q .photo-list__item {
   width: 320px;
   height: 210px;
-  margin: 10px;
+  margin: 10px 15px;
 }
 @-moz-keyframes create {
   0% {
