--- a/modules/photo-selector/styles/photo-list.styl
+++ b/modules/photo-selector/styles/photo-list.styl
@@ -1,16 +1,9 @@
+@import '../../../stylus/variables';
+
 .photo-list {
-    margin: 0
-    padding: 0
-    list-style: none
-    font-size: 11px
-
-    &_size_p {
-        font-size: 13px
-    }
-
-    &_size_q {
-        font-size: 16px
-    }
+    margin: 0 -25px 0 0;
+    padding: 0;
+    list-style: none;
     
     &__item {
         float: left;
@@ -20,21 +13,40 @@
         margin: 5px;
         position: relative;
         animation: create 0.1s;
+        cursor: pointer;
 
-        &-title {
+        &:after {
             position: absolute;
-            bottom: 0;
+            top: 0;
             left: 0;
-            background: rgba(0,0,0,0.7)
-            color: white;
-            padding: 3px 4px;
             width: 100%;
-            transition: transform 0.1s;
-            transform: translateY(100%);
+            height: 100%;
+            background: rgba(0,0,0,0.7);
+            font-size: 50px;
+            text-align: center;
+            font-family: 'icon-font';
+            opacity: 0;
+            transition: opacity 0.1s;
+            content: '';
+            line-height: 80px;
         }
 
-        &:hover &-title{
-            transform: translateY(0);
+        &.selected:after {
+            opacity: 1;
+            color: $primaryColor;
+            content: "\f023";
+        }
+
+        &:hover:after {
+            opacity: 1;
+            color: $primaryColor;
+            content: "\f0fb"
+        }
+        
+        &.selected:hover:after {
+            opacity: 1;
+            color: $red;
+            content: "\f102"
         }
 
         img {
@@ -44,24 +56,26 @@
         }
     }
 
-    &_size_p &__item-title {
-        padding: 5px 7px;
-    }
-
-    &_size_q &__item-title {
-        padding: 7px 10px;
+    &_size_p &__item:after {
+        line-height: 130px;
+        font-size: 80px;
     }
 
     &_size_p &__item{
         width: 200px;
         height: 130px;
-        margin: 7px;
+        margin: 7px 16px;
+    }
+
+    &_size_q &__item:after {
+        line-height: 210px;
+        font-size: 130px;
     }
 
     &_size_q &__item{
         width: 320px;
         height: 210px;
-        margin: 10px;
+        margin: 10px 15px;
     }
 }
 
