--- a/modules/timeline/timeline.css
+++ b/modules/timeline/timeline.css
@@ -19,7 +19,7 @@
   cursor: pointer;
 }
 .create-slideshow:before {
-  content: "\f03f";
+  content: "\f246";
   font-family: 'icon-font';
   font-size: 90px;
   color: #5c6bc0;
@@ -35,27 +35,32 @@
 .frame-list__item {
   display: inline-block;
   vertical-align: top;
-  font-size: 11px;
   width: 130px;
   height: 80px;
   overflow: hidden;
   margin: 5px;
   position: relative;
   animation: create 0.1s;
+  cursor: pointer;
 }
-.frame-list__item-title {
+.frame-list__item:after {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
-  background: rgba(0,0,0,0.7);
-  color: #fff;
-  padding: 3px 4px;
   width: 100%;
-  transition: transform 0.1s;
-  transform: translateY(100%);
+  height: 100%;
+  background: rgba(0,0,0,0.7);
+  font-size: 50px;
+  text-align: center;
+  font-family: 'icon-font';
+  opacity: 0;
+  transition: opacity 0.1s;
+  content: "\f102";
+  color: #d32f2f;
+  line-height: 80px;
 }
-.frame-list__item:hover .frame-list__item-title {
-  transform: translateY(0);
+.frame-list__item:hover:after {
+  opacity: 1;
 }
 .frame-list__item img {
   min-width: 100%;
