--- a/modules/timeline/timeline.styl
+++ b/modules/timeline/timeline.styl
@@ -1,3 +1,5 @@
+@import '../../stylus/variables';
+
 .timeline {
     position: absolute;
     bottom: 0;
@@ -20,7 +22,7 @@
     cursor: pointer;
 
     &:before {
-        content: "\f03f";
+        content: "\f246";
         font-family: 'icon-font';
         font-size: 90px;
         color: #5C6BC0;
@@ -36,30 +38,35 @@
     overflow: auto
 
     &__item {
-        display: inline-block
-        vertical-align: top
-        font-size: 11px
+        display: inline-block;
+        vertical-align: top;
         width: 130px;
         height: 80px;
         overflow: hidden;
         margin: 5px;
         position: relative;
         animation: create 0.1s;
+        cursor: pointer;
 
-        &-title {
+        &:after {
             position: absolute;
-            bottom: 0;
+            top: 0;
             left: 0;
-            background: rgba(0,0,0,0.7)
-            color: white;
-            padding: 3px 4px;
             width: 100%;
-            transition: transform 0.1s;
-            transform: translateY(100%);
+            height: 100%;
+            background: rgba(0,0,0,0.7);
+            font-size: 50px;
+            text-align: center;
+            font-family: 'icon-font';
+            opacity: 0;
+            transition: opacity 0.1s;
+            content: "\f102"
+            color: $red;
+            line-height: 80px;
         }
 
-        &:hover &-title{
-            transform: translateY(0);
+        &:hover:after {
+            opacity: 1;
         }
 
         img {
