--- a/stylus/main.css
+++ b/stylus/main.css
@@ -5,8 +5,18 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Lobster';
+  src: url("../fonts/Lobster_1.3-webfont.eot");
+  src: url("../fonts/Lobster_1.3-webfont.eot?#iefix") format('embedded-opentype'), url("../fonts/Lobster_1.3-webfont.woff2") format('woff2'), url("../fonts/Lobster_1.3-webfont.woff") format('woff'), url("../fonts/Lobster_1.3-webfont.ttf") format('truetype'), url("../fonts/Lobster_1.3-webfont.svg#lobster_1.3regular") format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 body {
   margin: 0;
+  color: #212121;
+  font: 14px/18px Tahoma, arial, sans-serif;
+  user-select: none;
 }
 body,
 html {
@@ -17,4 +27,59 @@ html {
   top: 50px;
   bottom: 0;
   width: 100%;
+}
+.wrapper {
+  padding: 0 20px;
+}
+.tac {
+  text-align: center;
+}
+.section {
+  overflow: hidden;
+  height: 100%;
+  position: relative;
+}
+.section__content {
+  position: absolute;
+  width: 100%;
+  top: 58px;
+  bottom: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.section__header {
+  overflow: hidden;
+  padding: 10px 5px 5px 30px;
+  line-height: 40px;
+  border-bottom: 1px solid #b6b6b6;
+  margin-bottom: 2px;
+}
+.section__title {
+  font-weight: normal;
+  font-size: 22px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  line-height: 40px;
+  margin: 0;
+}
+.button {
+  display: inline-block;
+  vertical-align: top;
+  height: 40px;
+  line-height: 40px;
+  text-decoration: none;
+  background: #4caf50;
+  padding: 0 20px;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: background 0.1s ease, box-shadow 0.05s ease;
+}
+.button:hover {
+  background: #388e3c;
+}
+.button:active {
+  box-shadow: 0 2px 3px #000 inset;
 }
