--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -1,22 +1,4 @@
-@font-face {
-    font-family: 'icon-font';
-    src: url('../fonts/Material-Design-Iconic-Font.eot?v=1.0.1');
-    src: url('../fonts/Material-Design-Iconic-Font.eot?#iefix&v=1.0.1') format('embedded-opentype'), url('../fonts/Material-Design-Iconic-Font.woff?v=1.0.1') format('woff'), url('../fonts/Material-Design-Iconic-Font.ttf?v=1.0.1') format('truetype'), url('../fonts/Material-Design-Iconic-Font.svg?v=1.0.1#Material-Design-Iconic-Font') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-body {
-    margin: 0
-}
-
-body, html {
-    height: 100%;
-}
-
-.main {
-    position: absolute;
-    top: 50px;
-    bottom: 0;
-    width: 100%;
-}
+@import 'variables';
+@import 'fonts';
+@import 'general';
+@import 'ui';
