--- a/modules/photo-selector/styles/photo-list.styl
+++ b/modules/photo-selector/styles/photo-list.styl
@@ -45,7 +45,7 @@
         
         &.selected:hover:after {
             opacity: 1;
-            color: $red;
+            color: $redColor;
             content: "\f102"
         }
 
