--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -7,6 +7,6 @@ $primaryTextColor = #212121
 $secondaryTextColor = #727272
 $dividerColor = #B6B6B6
 
-$red = #D32F2F
+$redColor = #D32F2F
 
 $headerHeight = 50px;
