--- a/modules/audio-selector/audio-selector.styl
+++ b/modules/audio-selector/audio-selector.styl
@@ -1,16 +1,10 @@
+@import '../../stylus/variables'
+
 .audio-selector {
     float: right;
     margin-left: 20px;
     width: 280px;
     position: relative;
-
-    &__header {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 50px;
-    }
 
     &__title {
         font-size: 20px;
@@ -18,26 +12,107 @@
         font-weight: bold;
         margin: 0;
     }
+
+    &__filter {
+        position: absolute
+        right: 0
+        top: 16px
+        font-size: 14px
+        width: 46px
+        height: 26px
+        padding: 0 3px 0 5px
+        border: 1px solid $darkPrimaryColor
+        outline: none
+        box-shadow: none
+        transition: width 0.15s, box-shadow 0.15s
+        z-index: 3
+
+        &::placeholder {
+            color: $darkPrimaryColor
+        }
+
+        &:focus {
+            width: 120px
+            box-shadow: -3px 0 12px rgba(0,0,0,0.5)
+        }
+    }
+
+    .section__header {
+        padding-left: 5px
+    }
 }
 .audio-list {
     margin: 0;
     letter-spacing: normal;
     position: absolute;
-    top: 50px;
+    top: 56px;
     bottom: 0;
     padding: 0;
     width: 100%;
     overflow: auto;
     font-size: 14px;
     box-sizing: border-box;
+    user-select: text;
 
     &__item {
         position: relative;
-        padding: 5px 40px 5px 5px;
-        cursor: pointer;
+        padding: 5px 40px 5px 27px;
+        border-top: 1px solid lighten($dividerColor, 30%)
+        transition: background-color 0.07s
+        background: none
+        height: 16px
+        cursor: pointer
+
+        &:first-child {
+            border: none
+        }
+
         &:hover {
             background: lightgray;
         }
+
+        &.selected {
+            background: $lightPrimaryColor
+        }
+    }
+
+    &__toggle {
+        position: absolute
+        right: 3px
+        top: 0
+        border: none
+        text-align: center
+        padding: 4px
+        transition: opacity 0.1s
+        cursor: pointer
+        outline: none
+        opacity: 0
+        z-index: 1
+        background: none
+
+        &:before {
+            width: 18px
+            height: 18px
+            border-radius: 2px
+            background: $darkPrimaryColor
+            color: $textPrimaryColor
+            content: "\f0fb"
+            display: block
+            font-family: 'icon-font'
+            font-size: 18px
+        }
+    }
+
+    &__item.selected &__toggle:before {
+        content: "\f102"
+        color: lighten($redColor, 20%)
+        background-color: $secondaryTextColor
+    }
+
+    &__item:hover &__toggle,
+    &__item.selected &__toggle{
+        opacity: 1
+        z-index: 2
     }
 
     &__duration {
@@ -45,6 +120,16 @@
         right: 5px;
         top: 5px;
         margin-left: 5px;
+        opacity: 1
+        transition: opacity 0.1s
+        z-index: 2
+        font-size: 12px
+    }
+
+    &__item.selected &__duration,
+    &__item:hover &__duration{
+        opacity: 0
+        z-index: 1
     }
 
     &__name {
@@ -52,5 +137,34 @@
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+        font-size: 12px
+    }
+
+    &__play {
+        border: none
+        text-align: center
+        position: absolute
+        background: none
+        left: 0
+        top: 0
+        padding: 4px
+        outline: none
+
+        &:before {
+            border-radius: 2px
+            background: $darkPrimaryColor
+            width: 17px
+            height: 18px
+            line-height: 20px
+            color: $textPrimaryColor
+            content: "\f0b9"
+            display: block
+            font-family: 'icon-font'
+            font-size: 15px
+        }
+
+        &.played:before {
+            content: "\f0b6"
+        }
     }
 }
