--- a/stylus/general.styl
+++ b/stylus/general.styl
@@ -43,6 +43,7 @@ body, html {
         line-height: 40px;
         border-bottom: 1px solid $dividerColor;
         margin-bottom: 2px;
+        position: relative;
     }
 
     &__title {
