--- a/stylus/variables.styl
+++ b/stylus/variables.styl
@@ -6,6 +6,7 @@ $accentColor = #795548
 $primaryTextColor = #212121
 $secondaryTextColor = #727272
 $dividerColor = #B6B6B6
+$grayColor = #727272
 
 $redColor = #D32F2F
 
