--- a/stylus/general.styl
+++ b/stylus/general.styl
@@ -9,6 +9,11 @@ body, html {
     height: 100%;
 }
 
+button {
+    outline: none;
+    cursor: pointer;
+}
+
 .main {
     position: absolute;
     top: $headerHeight;
